--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --branco-principal: #FFFFFF;
+    --branco-principal: #000000;
     --cinza-secundario: #ece2cb;
     --botao-azul: #5d3b85;
     --cor-de-fundo: #5c0a2c;
