--- a/style.css
+++ b/style.css
@@ -125,3 +125,11 @@ body {
     margin: 0 6em;
 
 }
+.principal {
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    align-items: center;
+    text-align: center;
+}
+
